feat: JdbcTemplate -> Spring Data JPA 마이그레이션